--- a/conf.js.dist
+++ b/conf.js.dist
@@ -5,7 +5,8 @@ module.exports = {
     version: '0.0.1'
   },
   storage: {
-    port: 6379
+    port: 6379,
+    host: 'localhost'
   },
   socket: {
     logLevel: 1
